2005-04-03  Richard Levitte  <richard@levitte.org>

	* popt/poptint.h (struct poptContext_s): Add field to keep track
	  of the number of allocated leftovers elements.
	* popt/popt.c (poptGetContext): Initialise it and use it.
	  (poptGetNextOpt): Use it and realloc leftovers when needed.
	  Also make sure that the added element is a dynamically allocated
	  copy of the original string, or we may end up with a dangling
	  pointer.  These are huge bugs in popt 1.7, when using
	  poptStuffArgs().
	  (poptFreeContext): Free the leftovers elements when freeing
	  leftovers.
	  (poptSaveLong, poptSaveInt): Apply a small patch from Debian.

	* popt/CHANGES, popt/COPYING, popt/README, popt/findme.c,
	  popt/findme.h, popt/popt.c, popt/poptconfig.c, popt/popt.h,
	  popt/popthelp.c, popt/poptint.h, popt/poptparse.c,
	  popt/system.h, popt/test1.c, popt/test2.c, popt/test3.c: Bundle
	  popt 1.7.
	* configure.ac, Makefile.am: Adapt.

2005-04-01  Richard Levitte  <richard@levitte.org>

	* contrib/Notify.pl: Complete rewrite.  Among other things, it
	  makes better use of some new monotone automate features.  It's
	  also better organised and much more documented.

2005-04-01  Jeremy Cowgar  <jeremy@cowgar.com>

	* tests/t_dropkey_2.at: Updated to test dropkey instead of delkey
	* tests/t_dropkey_1.at: Updated to test dropkey instead of delkey
	* monotone.texi (Key and Cert): Changed references to delkey
	  to dropkey
	  (Commands): Changed references to delkey to dropkey
	* testsuite.at: changed references from t_delkey* to t_dropkey*
	* t_delkey_1.at: renamed to t_dropkey_1.at
	* t_delkey_2.at: renamed to t_dropkey_2.at
	* commands.cc (CMD(delkey)): renamed to dropkey to maintain
	  command consistency (with existing drop command)

2005-04-01  Richard Levitte  <richard@levitte.org>

	* monotone.cc (my_poptStuffArgFile): An argument file might be
	empty, and therefore contain no arguments to be parsed.  That's
	OK.
	* tests/t_at_sign.at: Test it.
