@@ -267,7 +267,8 @@ filesystem.
 \fB-xargs=\fI<file>\fP
 Inject the contents of the file in place among the command line
 arguments.  This may be useful in case the command line would
-otherwise become too long for your system.
+otherwise become too long for your system.  This option can be used
+more than once if needed.
 .TP
 \fB-@ \fI<file>\fP
 An alias for \fB--xargs=\fI<file>\fP
